--- a/Simple Html/index.html
+++ b/Simple Html/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <base href="C:\Users\arunagarwal.NAGARRO\Desktop\POC\index.html">
-    <link rel="stylesheet" href="C:\Users\arunagarwal.NAGARRO\Desktop\POC\styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <root-component></root-component>
-    <script type="text/javascript" src="C:\Users\arunagarwal.NAGARRO\Desktop\POC\root-componentes5.js"></script>
-    <!-- <script type="text/javascript" src="./root-componentes2015.js"></script> -->
+    <script type="text/javascript" src="./root-componentes5.js"></script>
 </body>
 </html>
